Add suppression for deprecated CGDisplayIOServicePort call

This has no obviously correct replacement

TBR=zmo
BUG=650837
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://chromiumcodereview.appspot.com/2443783002
Cr-Commit-Position: refs/heads/master@{#426956}

Former-commit-id: 5bbf3c6317574a1b6b3798863d0b50299aff9070