gpu/config/gpu_info_collector_mac.mm
@@ -54,6 +54,12 @@ UInt32 GetEntryProperty(io_registry_entry_t entry, CFStringRef property_name) {
   return value;
 }
 
+// CGDisplayIOServicePort is deprecated as of macOS 10.9, but has no
+// replacement.
+// https://crbug.com/650837
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
+
 // Find the info of the current GPU.
 GPUInfo::GPUDevice GetActiveGPU() {
   GPUInfo::GPUDevice gpu;
@@ -62,6 +68,8 @@ GPUInfo::GPUDevice GetActiveGPU() {
   gpu.device_id = GetEntryProperty(dsp_port, CFSTR("device-id"));
   return gpu;
 }
+
+#pragma clang diagnostic pop
 
 // Scan IO registry for PCI video cards.
 CollectInfoResult CollectPCIVideoCardInfo(GPUInfo* gpu_info) {
